# SampledFP

./: CMakeLists.txt  README.md
include/: compressor.h  footprint.h  footprintManager.h  general.hpp  hist.h  lru.h  sampler.h  statistic.h  type.h  wss.h
src/: CMakeLists.txt  Footprint.cpp  GenerateTrace.cpp  HeadFrequency.cpp  README.md  RandomSampleWSS.cpp  RandomSampleWSSResult.cpp  SampledFootprint.cpp  SampledFootprintApproximation.cpp  SampledFrequency.cpp  SampledHeadFrequency.cpp  SampledWSS.cpp  USampleWSS.cpp  compressor.cpp  sampler.cpp
src/analyze/: CMakeLists.txt  FeqCum.r  FeqPlot.r  ShowFP.cpp  WholeTraceFeq.cpp  getFeq.cpp
src/lru/: CMakeLists.txt  lru.cpp
src/plot/: CMakeLists.txt  ShowFPCurve.cpp  getFP.cpp  histWSS.cpp
src/sampler_pin/: lru.h  makefile.rules  sampler.cpp  sampling.cpp
src/test/: CMakeLists.txt  USampleWSS_test.cpp  compressor_test.cpp  lru_test.cpp
src/trace_pin/: CMakeLists.txt  compressor.h  lz4.h  makefile  makefile.rules  note.md  trace.cpp
test/: getSFP.rb  log.md  window_length
